# ReID-text-annotation

./: .env.example  .gitattributes  .gitignore  DATA_LICENSE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
annotations/: README.md  checksums.sha256
annotations/clothes_changing/: prcc_group_diverse.jsonl
annotations/public_rgb/: cuhk03_text_release.jsonl  market1501_text_release.jsonl
annotations/traditional/: dukemtmc_pid_dense.jsonl  msmt17_pid_dense.jsonl
annotations/visible_infrared/: sysu_mm01_group_diverse.jsonl
docs/: PROTOCOLS.md
examples/: public_rgb_manifest.example.jsonl  rgb_ir_manifest.example.jsonl
reid_text_annotation/: __init__.py  api.py  cli.py  discovery.py  env.py  models.py  pipeline.py  prompts.py  selection.py
scripts/: validate_annotations.py
tests/: test_core.py
